fixed osbar padding, dock css, scrollbar disabled

--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,10 @@ body {
   color: #3e4246;
 }
 
+::-webkit-scrollbar { 
+    display: none; 
+}
+
 #api {
   height: 0;
   margin: 0; 
@@ -18,10 +22,10 @@ body {
 }
 
 #osBar {
-  width: 100%;
+  width: auto;
   height: 23px;
   margin: 0;
-  padding-left: 15px;
+  padding: 0 10px 0 14px;
   font-family: Arial, sans-serif;
   font-size: 13px;
   line-height: 13px;
@@ -62,7 +66,7 @@ body {
 
 #date {
   float: right !important;
-  padding-right: 30px !important;
+  padding-right: 10px !important;
 }
 
 .menu-popup {
@@ -1104,17 +1108,17 @@ a.dock-item2 {
 }
 img.notFinder {
   width: 75%;
-  margin-bottom: 10px; 
+  margin-bottom: 8px; 
 }
 img.notMail {
   width: 95%;
-  margin-bottom: 7px; 
+  margin-bottom: 5px; 
 }
 img.notiTunes {
   width: 85%; 
-  margin-bottom: 7px; 
+  margin-bottom: 5px; 
 }
 img.notStickies {
   width: 100%;
-  margin-bottom: 5px; 
+  margin-bottom: 3px; 
 }
